--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
+    "@storybook/react": "^5.1.10",
     "babel-loader": "^8.0.6"
   }
 }
